# projectTelepo

./: CMakeLists.txt  README.md  functions.cpp  functions.h  main  main.cpp  newTry.kdev4  newtry.categories  numbers  projectTelephones.kdev4  randomizer.cpp  structures.h  tekst.txt
src/: CMakeLists.txt  newtry.cpp  newtry.h  newtry.json
